add scroll animi

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Hero -->
     <div class="bg-pattern">
-        <div class="container pt-5 pb-5">
+        <div class="container pt-5 pb-5 scroll-animi">
             <div class="row p-5 ">
                 <div class="col-sm-5 themed-grid-col img-hero order-md-2">
                     <img src="./assets/images/hero.png" alt="Vimukthi Gunasekara">
@@ -110,7 +110,7 @@
     </div>
 
     <!-- Slider Container -->
-    <div class="row  mb-5 slider-container">
+    <div class="row mb-5 slider-container scroll-animi">
         <div class="col-sm-12 slider-content">
             <h1>Front-End Developer</h1>
             <h1>Web Developer</h1>
@@ -120,7 +120,7 @@
     </div>
 
     <!-- Projects -->
-    <div class="mt-5">
+    <div class="mt-5 scroll-animi">
         <div class="container pt-5" id="projects">
             <p class="text-center">Projects</p>
             <h1 class="text-center">Bringing<span class="name-grad-span"> Creative Solution </span> to </br>
@@ -318,7 +318,7 @@
     </div>
 
     <!-- Companies -->
-    <div class="container mt-5 mb-5 pt-5 text-center" id="experience">
+    <div class="container mt-5 mb-5 pt-5 text-center scroll-animi" id="experience">
         <h1>Companies i've <span class="name-grad-span">Worked</span> with</h1>
         <div class="row mt-5 d-flex justify-content-center align-items-center">
             <div class="col-md-4">
@@ -347,7 +347,7 @@
     </div>
 
     <!-- Publication -->
-    <div class="container mt-5 mb-5 position-relative overflow-hidden rounded publ-cont bg-pattern" id="publications">
+    <div class="container mt-5 mb-5 position-relative overflow-hidden rounded publ-cont bg-pattern scroll-animi" id="publications">
         <div class="row">
             <div class="col-md-7 p-5">
                 <h3 class="name-grad-span">The Best Preferred Product Location Recommendation According to User
@@ -389,7 +389,7 @@
     </div>
 
     <!-- Blog -->
-    <div class="container" id="blog">
+    <div class="container scroll-animi" id="blog">
         <h1 class="text-center mt-5 pt-5">Latest<span class="name-grad-span"> Tech Blog </span>Posts</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mt-2 mb-5">
             <div class="col" data-name="Front-End">
@@ -442,10 +442,10 @@
         </div>
     </div>
 
-    <hr class="text-white">
+    <hr class="text-white scroll-animi">
 
     <!-- Footer -->
-    <div class="row text-center p-5 mt-5">
+    <div class="row text-center p-5 mt-5 scroll-animi">
         <div class="col-md-4">
             <h5>vimukthisadaruwan65@gmail.com</h5>
         </div>
