--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     <!-- Footer -->
     <div class="row text-center p-5 mt-5 scroll-animi">
         <div class="col-md-4">
-            <h5><a class="text-white text-decoration-none" href="https://mail.google.com/mail/?view=cm&fs=1&to=vimukthisadaruwan65@gmail.com">vimukthisadaruwan65@gmail.com</a></h5>
+            <h5><a class="text text-decoration-none" href="https://mail.google.com/mail/?view=cm&fs=1&to=vimukthisadaruwan65@gmail.com">vimukthisadaruwan65@gmail.com</a></h5>
         </div>
         <div class="col-md-4">
             <h3>Let's Talk</h3>
