--- a/index.html
+++ b/index.html
@@ -319,8 +319,10 @@
 
     <!-- Companies -->
     <div class="container mt-5 mb-5 pt-5 text-center scroll-animi" id="experience">
+        <p class="text-center">Work Experiance</p>
         <h1>Companies i've <span class="name-grad-span">Worked</span> with</h1>
         <div class="row mt-5 d-flex justify-content-center align-items-center">
+
             <div class="col-md-4" data-toggle="modal" data-target="#kanrichModal">
                 <img src="./assets/images/kanrich.png" alt="img" class="we-logo rounded-circle p-4">
             </div>
@@ -330,7 +332,7 @@
                 <div class="modal-dialog modal-xl" role="document">
                     <div class="modal-content bg-pattern">
                         <div class="row modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Kanrich Finance Limited</h5>
+                            <h5 class="col-sm-11 modal-title" id="exampleModalLabel">Kanrich Finance Limited</h5>
                             <h1 class="name-grad-span">Software Engineer</h1>
                             <p>May 2018 - Feb 2021</p>
                         </div>
@@ -376,6 +378,10 @@
                                         synergistic teamwork and alignment towards project objectives.</li>
                                 </ul>
                             </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                aria-label="Close">Close</button>
                         </div>
                     </div>
                 </div>
@@ -424,6 +430,10 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                aria-label="Close">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -470,6 +480,10 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                aria-label="Close">Close</button>
                         </div>
                     </div>
                 </div>
@@ -538,6 +552,10 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                aria-label="Close">Close</button>
                         </div>
                     </div>
                 </div>
