--- a/index.html
+++ b/index.html
@@ -165,18 +165,17 @@
 
                     <div class="col projects">
                         <div class="card shadow-sm card-bg">
-                            <img src="./assets/images/budget-tracker.png" alt="img">
+                            <img src="./assets/images/dogfoods.png" alt="img">
                             <div class="card-body">
                                 <p class="card-tag ">Front-End</p>
-                                <h4 class="card-title">Budget Tracker Web App</h4>
-                                <p class="card-text">An application designed to monitor earnings and spending while
-                                    handling various currency conversions.</p>
+                                <h4 class="card-title">Dog food Recipes React App 🐶</h4>
+                                <p class="card-text">A Guide to Homemade Dog Food and Treats.nutritious and tasty meals made with love</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a class="btn btn-sm btn-outline-secondary"
-                                            href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
+                                            href="https://github.com/VimukthiGunasekara/pawsome-plates">Github</a>
                                         <a class="btn btn-sm btn-outline-secondary"
-                                            href="https://cdennis27.github.io/budgettrackergroup2">Live</a>
+                                            href="https://vimukthigunasekara.github.io/pawsome-plates">Live</a>
                                     </div>
                                 </div>
                             </div>
@@ -219,21 +218,22 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>                    
 
                     <div class="col projects">
                         <div class="card shadow-sm card-bg">
-                            <img src="./assets/images/professional-readme-generator.png" alt="img">
+                            <img src="./assets/images/budget-tracker.png" alt="img">
                             <div class="card-body">
-                                <p class="card-tag ">Inquirer-Module</p>
-                                <h4 class="card-title">Professional Readme File
-                                    Generator</h4>
-                                <p class="card-text">GitHub README Generator Application and displays it on a newly
-                                    created README.md file.</p>
+                                <p class="card-tag ">Front-End</p>
+                                <h4 class="card-title">Budget Tracker Web App</h4>
+                                <p class="card-text">An application designed to monitor earnings and spending while
+                                    handling various currency conversions.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a class="btn btn-sm btn-outline-secondary"
-                                            href="https://github.com/VimukthiGunasekara/professional-readme-generator">Github</a>
+                                            href="https://github.com/cdennis27/budgettrackergroup2">Github</a>
+                                        <a class="btn btn-sm btn-outline-secondary"
+                                            href="https://cdennis27.github.io/budgettrackergroup2">Live</a>
                                     </div>
                                 </div>
                             </div>
